--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ img {
 .nav-header-item {}
 
 .item-nav-link {
+    position: relative;
 
     font-weight: 500;
     font-size: 16px;
@@ -112,6 +113,8 @@ img {
     padding: 24px 0;
 }
 
+
+
 .header-nav-list {
     padding: 24px 0;
 }
@@ -119,6 +122,21 @@ img {
 .item-nav-link:hover,
 .item-nav-link:focus {
     color: #404bbf;
+}
+
+.current {
+    color: #404bbf;
+}
+
+.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
 }
 
 .header-addr {
@@ -151,9 +169,14 @@ img {
 /* #region Hero */
 
 .hero-section {
+    margin: 0 auto;
+    max-width: 1200px;
     background-color: #2e2f42;
     padding: 188px 0;
     display: flex;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 
@@ -223,9 +246,25 @@ img {
     gap: 24px;
 }
 
+.content-icon-container {
+    display: block;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background-color: #f4f4fd;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 8px;
+}
+
 .content-list-item {
     width: calc((100%-72px)/4);
 }
+
+
+
 
 
 .content-item-title {
@@ -273,6 +312,7 @@ img {
     background-color: #FFFFFF;
     width: calc((100%-72px)/4);
     border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-item-title {
@@ -293,10 +333,45 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+    margin-bottom: 8px;
 }
 
 .team-info {
     padding: 32px 0;
+}
+
+.team-icon-list {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.team-icon-item {
+    width: 40px;
+    height: 40px;
+}
+
+.team-icon-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icon-link:hover,
+.team-icon-link:focus {
+    background-color: #404BBF;
+    ;
+}
+
+.team-icon {
+    fill: #f4f4fd;
 }
 
 /* #endregion Team */
@@ -320,8 +395,10 @@ img {
     gap: 48px 24px;
 }
 
-.portfolio-list-item .portfolio-list {
+.portfolio-list-item {
     width: calc((100%-48px)/3);
+    cursor: pointer;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolion-info {
@@ -329,6 +406,42 @@ img {
     border-top: none;
     padding: 32px 16px;
 }
+
+.portfolio-list-item:hover .image-container-paragraph {
+    transform: translateY(0%);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-image-container {
+    position: relative;
+    overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.image-container-paragraph {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    transform: translateY(100%);
+    transition-property: background-color, transform;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 
 .portfolio-item-title {
     font-weight: 500;
@@ -351,6 +464,7 @@ img {
 .footer-section {
     background-color: #2e2f42;
     padding: 100px 0;
+
 
 }
 
@@ -378,4 +492,53 @@ img {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     width: 264px;
+}
+
+
+
+.footer-title-media {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer-icon-list {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-item-icon {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-icon-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-icon {
+    fill: #f4f4fd;
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-container-left {
+    margin-right: 120px;
 }
