--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,9 @@ img {
 .header-section {
     border-bottom: 1px solid #e7e9fc;
     height: 72px;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    position: relative;
+    color: #404bbf;
 }
 
 .logo-header {
@@ -111,6 +114,7 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -126,6 +130,7 @@ img {
 
 .current {
     color: #404bbf;
+
 }
 
 .current::after {
@@ -137,6 +142,7 @@ img {
     width: 100%;
     height: 4px;
     background-color: #404bbf;
+
 }
 
 .header-addr {
@@ -156,7 +162,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    font-style: normal
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-addr-item:hover,
@@ -170,13 +176,14 @@ img {
 
 .hero-section {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1440px;
     background-color: #2e2f42;
     padding: 188px 0;
     display: flex;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 
 }
 
@@ -209,6 +216,7 @@ img {
     border-radius: 4px;
     margin: 0 auto;
     padding: 16px 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
